[emacs] Fix docstring

--- a/emacs.org
+++ b/emacs.org
@@ -6656,7 +6656,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
           'no-checker))))
 
     (defun koek-ml/get-flymake-n-diags ()
-      "Return number of diagnosis per type of error."
+      "Return number of diagnoses per error type."
       (thread-last (hash-table-values flymake--backend-state)
         (seq-mapcat #'flymake--backend-state-diags)
         (seq-group-by (lambda (diag)
