[emacs] Show fine diff for current hunk in various magit modes

--- a/emacs.org
+++ b/emacs.org
@@ -275,6 +275,11 @@ VC is a placeholder.
     :bind
     ("C-c f g" . magit-status))
 
+  (use-package magit-diff
+    :defer t
+    :config
+    (setq magit-diff-refine-hunk t))
+
   (use-package magit-log
     :bind
     ("C-c f h" . magit-log-buffer-file))
