[emacs] Tweak appearance diffs

--- a/emacs.org
+++ b/emacs.org
@@ -6411,6 +6411,7 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
     (setq modus-themes-headings '((t . section)))
     (setq modus-themes-variable-pitch-headings t)
     (setq modus-themes-scale-headings t)
+    (setq modus-themes-diffs 'deuteranopia)
     (setq modus-themes-org-blocks 'greyscale)
     :config
     (setq face-near-same-color-threshold 45000)
